overflow on sidebar fix

--- a/src/assets/fabricator/styles/partials/_layout.scss
+++ b/src/assets/fabricator/styles/partials/_layout.scss
@@ -52,5 +52,6 @@ body {
 	@media (min-width: 60em) {
 		width: $content-width;
 		float: right;
+		min-height: 800px;
 	}
 }
