--- a/src/assets/fabricator/styles/partials/_variables.scss
+++ b/src/assets/fabricator/styles/partials/_variables.scss
@@ -7,7 +7,7 @@ $settings: (
 	primary-light: #0073cf,
 	primary-dark: #002855,
 	border: rgba(0, 0, 0, 0.1),
-	menu-width-desktop: 16.841269841269842%,
+	menu-width-desktop: 19.841269841269842%,
 	menu-width-mobile: 250px,
 	content-width: 74.90079365079364%,
 	max-width: 1008px,
